// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[routes] <NewsArticleRoute /> renders 404 error page when no news article exists 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      Page not found
    </h1>
  </header>
  <div
    class="ErrorPage-content"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <p>
      This page does not exist - please use the site navigation to find what you're looking for.
    </p>
  </div>
</article>
`;

exports[`[routes] <NewsArticleRoute /> renders 500 error page when slug isn't in the store 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      An error has occurred
    </h1>
  </header>
  <div
    class="ErrorPage-content"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <p>
      An error has occurred, please try again.
    </p>
  </div>
</article>
`;

exports[`[routes] <NewsArticleRoute /> renders a loader when item is being fetched 1`] = `
<span
  class="Loader PageLoader"
>
  <div
    class="Loader-animation"
  >
    <span />
    <span />
    <span />
  </div>
</span>
`;

exports[`[routes] <NewsArticleRoute /> renders correctly 1`] = `
<article
  class="NewsArticle"
>
  <header
    class="PageHeader"
  >
    <h1>
      Debut EP 'HEART' released
    </h1>
  </header>
  <div
    class="NewsArticle-body"
  >
    <figure
      class="Image NewsArticle-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          alt="Debut EP 'HEART' released"
          src="https://s3.amazonaws.com/mynameisviii-static/news/debut-ep-heart-released.jpg"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <section
      class="NewsArticle-meta"
    >
      <div
        class="NewsArticle-posted"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
         
        <span>
          Posted
        </span>
         
        <time
          class="DateTime"
          datetime="2018-11-15T00:00:00"
          title="Thursday, November 15, 2018, 12:00 AM"
        >
          <span>
            in 10 months
          </span>
        </time>
         
        <span>
          by
        </span>
         Viii
      </div>
      <div
        class="Type Type-release"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
          />
        </svg>
         Release
      </div>
    </section>
    <section
      class="NewsArticle-content"
    >
      <div
        class="NewsArticle-contentText"
      >
        <p />
      </div>
      <div
        class="ButtonBar NewsArticle-action"
      >
        <a
          class="Button"
          href="/releases/heart"
        >
          View 'HEART'
        </a>
      </div>
    </section>
  </div>
</article>
`;
